<resources>
  <string name="app_name">Homework1</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="notifications_name">Notifications</string>

  <string name="news_name">News Feed</string>

  <string name="users_full_name">Sarah Williams</string>

  <string name="status">STATUS</string>
  <string name="photo">PHOTO</string>
  <string name="check_in">CHECK IN</string>
  <string name="news_item_title_text">Casey Song with Harrison Smith and 3 others</string>
  <string name="news_item_text">Good food, good friends and a lof of laughs</string>
</resources>
